--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,16 +1,18 @@
 /*		  Global Variables Set: variables.scss		*/
 /*      ========================================   */
 
-// Color Palette
+// Base for the Color Palette
 $brand-primary: 	#681400;
+// Determines the color scheme
+$hueAngle: 25;
+
+// CSS Variables - Coming Soon!
+// :root {
+//  --primary-clr: #{$brand-primary};
+// }
 
 $white: #fff;
 $black: #000;
-
-// CSS Variables
-:root {
-	--primary-clr: #{$brand-primary};
-}
 
 //## Grayscale from Bootstrap.
 $gray-base: 		#000;
@@ -25,21 +27,39 @@ $gray-lighter: 		lighten($gray-base, 93.5%); // #eee
 $gray-safe:			#767676;
 
 // Transparency Tints & Shadings
-$tint10: rgba(255,255,255, 0.1);
-$tint17: rgba(255,255,255, 0.175);
-$tint25: rgba(255,255,255, 0.25);
-$tint50: rgba(255,255,255, 0.5);
-$tint87: rgba(255,255,255, 0.875);
+ $tint10: rgba(255,255,255, 0.1);
+ $tint17: rgba(255,255,255, 0.175);
+ $tint25: rgba(255,255,255, 0.25);
+ $tint50: rgba(255,255,255, 0.5);
+ $tint87: rgba(255,255,255, 0.875);
 $shade10: rgba(0,0,0, 0.1);
 $shade17: rgba(0,0,0, 0.175);
 $shade25: rgba(0,0,0, 0.25);
 $shade50: rgba(0,0,0, 0.5);
 $shade87: rgba(0,0,0, 0.875);
 
+// State Colors - borrowed from Bootstrap 4
+$success-base: #28a745;
+   $info-base: #17a2b8;
+$warning-base: #ffc107;
+ $danger-base: #dc3545;
 
-// $link-color:		#50708a;
-// $link-color:		darken($brand-blue, 35);
-// $link-color-hover:	darken($link-color, 15);
+// Define the color base
+$brand: (
+    primary: $brand-primary,
+     accent: adjust-hue($brand-primary, 180),
+  secondary: adjust-hue($brand-primary, $hueAngle),
+   tertiary: adjust-hue($brand-primary, -($hueAngle)),
+quarternary: #999, // None in this template
+       info: $info-base, 
+    warning: $warning-base, 
+     danger: $danger-base, 
+    success: $success-base
+);
+
+
+$link-color:       #50708a;
+$link-color-hover: lighten($link-color, 15);
 
 // Navbar links
 // $navbar-default-link-color:                $brand-brown;
@@ -50,31 +70,24 @@ $shade87: rgba(0,0,0, 0.875);
 
 // Print Element Variables
 $print-base-light: 	#eee;
-$print-base-med: 	#ddd;
+$print-base-med: 	  #ddd;
 $print-base-dark: 	#c7c7c7;
 
-$print-bg-light: 	$print-base-light !important;
-$print-bg-med: 		$print-base-med !important;
-$print-bg-dark: 	$print-base-dark !important;
+$print-bg-light: 	  $print-base-light !important;
+$print-bg-med:      $print-base-med !important;
+$print-bg-dark:     $print-base-dark !important;
 
 $print-brd-light: 	darken($print-base-light, 10) !important;
-$print-brd-med: 	darken($print-base-med, 10) !important;
-$print-brd-dark: 	darken($print-base-dark, 10) !important;
+$print-brd-med: 	  darken($print-base-med, 10) !important;
+$print-brd-dark: 	  darken($print-base-dark, 10) !important;
 
 
 //   Components
-$comp-border: #ddd;
-$comp-bg: #f5f5f5;
-$comp-bg-shade: lighten($gray-light, 30);
-$comp-border-shade: darken($comp-bg-shade, 5);
+$comp-bg:           #F2F2F2;
+$comp-border:       $shade17;
+$comp-bg-shade:     darken($comp-bg, 10);
+$comp-border-shade: $shade25;
 
-// Border Radii
-$border-radius-base:        4px;
-$border-radius-large:       6px;
-$border-radius-small:       3px;
-
-// Box Shadow effect
-$shadow-base: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 
 // Typography variables
 $line-height: 1.5;
@@ -103,18 +116,27 @@ $print-line-height: $line-height;
 // Major Second Scale: 1.125 - see above
 $print-type-scale: 1.125;
 
-
-
 // Set the Type Size names, assign placement on the scale
 $type-map: (
-     x-small-type: -2, 
-       small-type: -1, 
-             base:  0, 
-       large-type:  1, 
-     x-large-type:  2, 
-    xx-large-type:  3, 
-     primary-head:  4
+ x-small-type: -2, 
+   small-type: -1, 
+         base:  0, 
+   large-type:  1, 
+ x-large-type:  2, 
+xx-large-type:  3, 
+ primary-head:  4
 );
+
+
+// Border Radii
+$border-radius-base:        4px;
+$border-radius-large:       $border-radius-base * 1.5;
+$border-radius-small:       $border-radius-base * 0.75;
+
+// Box Shadow effect
+$shadow-base: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+$shadow-base-2: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+
 
 // Layout Grid Sizes
 $screen-lg:			1200px;
