--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -1,10 +1,10 @@
 <nav class="global">
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Lorem</a></li>
-        <li><a href="#">Perspiciatis</a></li>
-        <li><a href="#">Laborum</a></li>
-        <li><a href="#">Vitae</a></li>
-        <li><a href="#">Deleniti</a></li>
+        <li><a href="index.html"><i class="fas fa-home"></i> API Home</a></li>
+        <li><a href="color.html"><i class="fas fa-palette"></i> Color</a></li>
+        <li><a href="type.html"><i class="fas fa-i-cursor"></i> Typography</a></li>
+        <li><a href="modules.html"><i class="fas fa-cubes"></i> Modules</a></li>
+        <li><a href="#"><i class="fas fa-vector-square"></i> Layouts</a></li>
+        <li><a href="#" id="toggle-grid"><i class="fas fa-border-all"></i> Grid</a></li>
     </ul>
 </nav>
