--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -10,113 +10,153 @@
 @import "../../../node_modules/@fortawesome/fontawesome-free/scss/v4-shims";
 
 html {
-    font-size: $base-font-size;
-    height: 100%;
+  font-size: $base-font-size;
+  height: 100%;
 }
 
 @include responsive(xs) {
-    html {
-        font-size: $nrw-font-size;
-    }
+  html {
+    font-size: $nrw-font-size;
+  }
 }
 
 
 body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 1rem;
-    line-height: $line-height;
-    min-height: 100%;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+  line-height: $line-height;
+  min-height: 100%;
 }
 
 h1 {
-    @extend %primary-head;
+  @extend %primary-head;
 
-    color: var(--primary-clr, $brand-primary);
-    margin-bottom: 1px;
-    padding-bottom: beat(2);
+  color: var(--primary-clr, $brand-primary);
+  margin-bottom: 1px;
+  padding-bottom: beat(2);
 }
 
 h2 {
-    @extend %xx-large-type;
+  @extend %xx-large-type;
 
-    padding-bottom: beat(2);
+  padding-bottom: beat(2);
 }
 
 h3 {
-    @extend %x-large-type;
+  @extend %x-large-type;
 
-    padding-top: beat(2);
+  padding-top: beat(2);
 }
 
 h4 {
-    @extend %large-type;
+  @extend %large-type;
 }
 
 h5 {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 
 h6 {
-    @extend %small-type;
+  @extend %small-type;
 
-    font-weight: bolder;
+  font-weight: bolder;
 }
 
 .footnote > * {
-    @extend %x-small-type;
+  @extend %x-small-type;
 }
 
-p,
-ul,
-ol,
-dl,
-address {
+.main-content,
+body > aside {
+  p,
+  ul,
+  ol,
+  dl,
+  address {
     margin-bottom: beat();
-}
+    max-width: 54.25rem;
+  }
 
-p {
-    &.lead {
-        @extend %large-type;
-    }
+  ul,
+  ol {
+    padding-left: 1em;
+  }
 
-    &.small {
-        @extend %small-type;
-    }
+  ul {
+    list-style-type: disc;
+  }
 
-    &.smallest {
-        @extend %x-small-type;
-    }
-}
+  ol {
+    list-style-type: decimal;
+  }
 
-.main-content {
-    p,
-    ul,
-    ol,
-    dl,
-    address {
-        margin-bottom: beat();
-        max-width: 54.25rem;
+  li {
+    margin-bottom: beat(2);
+
+    &:last-child {
+      margin-bottom: 0;
     }
+  }
+
+  dt {
+    font-weight: 700;
+  }
+
+  dd {
+    margin: 0 0 beat(2) 0.75em;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  a {
+    color: $link-color;
+    font-weight: 500;
+    text-decoration: underline;
+
+    &:visited {
+      color: $link-color-visited;
+    }
+    &:hover {
+      color: $link-color-hover;
+    }
+    &:active {
+      color: $link-color-active;
+    }
+  }
+
+  p.lead {
+    @extend %large-type;
+  }
+
+  p.small {
+    @extend %small-type;
+  }
+
+  p.smallest {
+    @extend %x-small-type;
+  }
 }
 
 // Utility Classes
 .sr-only {
-    border: 0;
-    clip: rect(0, 0, 0, 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 
-    &.sr-only-focusable:active:active,
-    &.sr-only-focusable:active:focus {
-        clip: auto;
-        height: auto;
-        margin: 0;
-        overflow: visible;
-        position: static;
-        width: auto;
-    }
+  &.sr-only-focusable:active:active,
+  &.sr-only-focusable:active:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto;
+  }
 }
