--- a/src/scss/partials/_modules.scss
+++ b/src/scss/partials/_modules.scss
@@ -1,35 +1,8 @@
+@import "mod-molecular";
+@import "mod-data-lists";
+@import "mod-tables";
+@import "mod-forms";
+@import "mod-navigation";
+
 @import "mod-development";
 
-nav.global {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 5000;
-  background-color: #fff;
-
-  ul {
-    display: flex;
-    justify-content: space-around;
-    list-style-type: none;
-    max-width: 1200px;
-    margin: 0 auto;
-
-    li {
-      a {
-        display: block;
-
-        @extend %component-compact;
-
-        margin: 0;
-        border-color: transparent;
-        cursor: pointer;
-        border-radius: 0;
-
-        &:hover {
-          background-color: map-get($accent, "10");
-        }
-      }
-    }
-  }
-}
