--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -4,7 +4,7 @@
 // Base for the Color Palette
 $brand-primary: 	#681400;
 // Determines the color scheme
-$hueAngle: 25;
+$hueAngle: 120;
 
 // CSS Variables - Coming Soon!
 // :root {
@@ -25,6 +25,7 @@ $gray-lighter: 		lighten($gray-base, 93.5%); // #eee
 // Lightest gray text-color on full white BG
 // For accessibility audit
 $gray-safe:			#767676;
+$gray-safer:    darken($gray-safe, 8);
 
 // Transparency Tints & Shadings
  $tint10: rgba(255,255,255, 0.1);
@@ -58,8 +59,6 @@ quarternary: #999, // None in this template
 );
 
 
-$link-color:       #50708a;
-$link-color-hover: lighten($link-color, 15);
 
 // Navbar links
 // $navbar-default-link-color:                $brand-brown;
@@ -82,11 +81,6 @@ $print-brd-med: 	  darken($print-base-med, 10) !important;
 $print-brd-dark: 	  darken($print-base-dark, 10) !important;
 
 
-//   Components
-$comp-bg:           #F2F2F2;
-$comp-border:       $shade17;
-$comp-bg-shade:     darken($comp-bg, 10);
-$comp-border-shade: $shade25;
 
 
 // Typography variables
@@ -138,7 +132,7 @@ $shadow-base: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.
 $shadow-base-2: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 
 
-// Layout Grid Sizes
+// Screen Breakpoint Sizes
 $screen-lg:			1200px;
 $screen-md:			 992px;
 $screen-sm: 		 768px;
